Major overhaul of emacs configuration
This is a big change to go back to an org-babel based configuration, where the
config is tangled from the Org file to the emacs .el files.  The difference from
last time is that this tangles straight to init.el rather than doing an
org-babel-load-file.

This also purges all the lisp that was under modules/ since it is now in
emacs.org.

It seems startup time is a bit better and this will allow for byte-compiling.

--- a/README.org
+++ b/README.org
@@ -1,235 +1,1 @@
-#+TITLE: README
-#+AUTHOR: Stephen Fromm
-
-* Forge
-
-This is my /forge/ for getting stuff done.  It is based in [[https://www.gnu.org/software/emacs/][Emacs]].  This is how I manage [[https://notmuchmail.org/][mail]], software
-development, journaling, project tracking, and more.
-
-At one time, this configuration was based on the ideas of [[http://orgmode.org/worg/org-contrib/babel/intro.html#literate-programming][literate programming]].  While I have moved
-away from that for managing my Emacs configuration, I think there are a lot of positive elements to
-it that I still use in other projects.  As part of this rewrite, I opted to move away from this
-approach to managing /emacs.d/.
-
-The goal is to make use of [[https://github.com/jwiegley/use-package][use-package]] as much as possible when installing and configuring packages
-to use.
-
-This environment is managed by the included Makefile.  It only has two targets:  Install Emacs and
-update the installed packages.
-
-** Installation
-
-First things first.  Clone the git repository:
-
-#+BEGIN_EXAMPLE
-$ git clone https://github.com/sfromm/dot-emacs.d ~/.emacs.d
-#+END_EXAMPLE
-
-If you do not already have Emacs installed, you can use the =make install= target.  On MacOSX, this
-will use [[https://brew.sh/][Homebrew]] to install Emacs.
-
-On the first time you run /emacs-forge/, it will go through and install several packages.  This may
-take awhile, so please be patient.  You can also run the target =make bootstrap= command to install
-the main packages needed by /emacs-forge/.
-
-** Updates
-
-You can keep up to date by using the =make update= target.  This will do a few things:
-
-- Do a =git pull= to pull in the latest changes to /emacs-forge/.
-- Run the function =forge/update-packages= to update the installed Emacs packages.
-
-** Configuration
-
-There are a couple directories you use to store any personal or site-specific configuration for
-/emacs-forge/:
-
-- *~/.emacs.d/site-lisp* (=forge-site-dir=)
-- *~/.emacs.d/user*  (=forge-personal-dir=)
-
-** Modules
-
-*** Appearance
-
-**** Themes
-
-This will automatically install the following themes.
-
-- [[https://github.com/hlissner/emacs-doom-themes][doom-themes]]
-- [[https://github.com/fniessen/emacs-leuven-theme][leuven-theme]]
-- [[https://github.com/cpaulik/emacs-material-theme][material-theme]]
-- [[https://github.com/kunalb/poet][poet-theme]]
-- [[https://github.com/bbatsov/solarized-emacs][solarized-theme]]
-- [[https://github.com/nashamri/spacemacs-theme][spacemacs-theme]]
-- [[https://github.com/bbatsov/zenburn-emacs][zenburn-theme]]
-
-*** Chat
-
-The /chat/ module will facilitate chatting via Jabber, IRC, and Slack.
-
-**** Jabber
-
-The support for Jabber, ie. XMPP, is provided by [[https://github.com/legoscia/emacs-jabber][emacs-jabber]].  For configuration of
-=jabber-account-alist=, it is set to =forge-jabber-account-alist=.  It uses the same conventions for
-how to configure account(s).  Please refer to that [[info:jabber#Account%20settings][documentation]] for more information.
-
-***** Known issues
-
-#+begin_example
-        (setq chosen
--	    (if (and input (assoc-ignore-case input jid-completion-table))
--		(symbol-name (cdr (assoc-ignore-case input jid-completion-table)))
-+	    (if (and input (assoc-string input jid-completion-table t))
-+		(symbol-name (cdr (assoc-string input jid-completion-table t)))
-#+end_example
-
-- There is a [[https://github.com/legoscia/emacs-jabber/pull/26][pull request #26]] to fix the now missing function =assoc-ignore-case=.  It was deprecated
-  with Emacs 22 and is now gone.  You can use the apply the patch from the PR to /jabber-util.el/.
-  I've run into this bug when trying to join a MUC.
-
-**** Slack
-
-The support for slack is provided via [[https://github.com/yuya373/emacs-slack][emacs-slack]].
-
-*** Email
-
-The =forge-mail= module sets up reading and sending email from within Emacs.  I've bounced back and
-forth between [[https://notmuchmail.org/][notmuch]] and [[http://www.djcbsoftware.nl/code/mu/mu4e.html][mu4e]] several times through the years.  They both have their positives and
-their not-so positives.  At this time, [[https://notmuchmail.org/][notmuch]] is a better fit for my workflow and I've managed to
-smooth over some of the pain points.
-
-The setup is basically:  [[http://isync.sourceforge.net/][mbsync]] to sync mail locally, [[https://notmuchmail.org/][notmuch]] to index, and Emacs' [[https://www.gnu.org/software/emacs/manual/html_node/smtpmail/Emacs-Speaks-SMTP.html][smtpmail]] to send
-mail.  I happen to be online more often than not and have not needed something like [[https://marlam.de/msmtp/][msmtp]] to handle
-mail queuing while offline.
-
-Here's an example /mbsyncrc/ configuration:
-
-#+BEGIN_EXAMPLE
-Create Both
-Expunge Both
-SyncState *
-
-IMAPAccount Work
-Host mail.example.com
-User myusername
-PassCmd "~/bin/auth-source-query.py myusername mail.example.com 993"
-SSLType IMAPS
-CertificateFile ~/.mail/.certs.pem
-
-IMAPStore work-remote
-Account Work
-
-MaildirStore work-local
-Path ~/.mail/Work/
-Inbox ~/.mail/Work/INBOX
-Flatten .
-
-Channel work
-Master :work-remote:
-Slave :work-local:
-#+END_EXAMPLE
-
-And here are example notmuch hooks.
-
-#+BEGIN_SRC sh :tangle no :shebang #!/bin/bash
-# The pre-new hook
-echo -e "---\nStart $(date)."
-mbsync -a
-exit 0
-#+END_SRC
-
-#+BEGIN_SRC sh :tangle no :shebang #!/bin/bash
-# The post-new hook
-notmuch tag --batch <<EOF
-+inbox                  -- folder:Work/INBOX or folder:Personal/INBOX
--inbox                  -- not ( folder:Personal/INBOX or folder:Work/INBOX )
-+sent                   -- folder:Personal/Sent or folder:Work/Sent
-+bulk                   -- folder:Work/Spam or folder:Work/incoming
--bulk                   -- not ( folder:Work/Spam or folder:Work/incoming or folder:Work/Trash )
-+trash -archive -inbox  -- folder:Personal/Trash or folder:Work/Trash
-#
-+invite                 -- mimetype:text/calendar
-#
--new -- tag:new
-EOF
-
-echo -e "Done at $(date)."
-exit
-#+END_SRC
-
-**** Gmail
-
-If using GMail, you may want to consider using [[https://github.com/gauteh/lieer][lieer]], a utility to pull email and labels from your
-GMail account.
-
-For installation:
-
-#+begin_src sh :tangle no
-pip3 install google-api-python-client
-pip3 install oauth2client
-pip3 install tqdm
-git clone https://github.com/gauteh/lieer.git ~/src/lieer
-pushd ~/bin
-ln -s ~/src/lieer/gmi gmi
-popd
-#+end_src
-
-See the [[https://github.com/gauteh/lieer/blob/master/docs/index.md][instructions]] for more on how to setup and configure ~lieer~.
-
-*** Eshell
-
-Interesting reading:
-
-- [[https://www.masteringemacs.org/article/complete-guide-mastering-eshell][Mastering Eshell]] by Mickey Petersen
-- [[http://howardism.org/Technical/Emacs/eshell-fun.html][Eschewing Zshell for Emacs Shell]] by Howard Abrams
-
-*** OrgMode
-
-For all changes, see the upstream Org Mode [[https://orgmode.org/Changes.html][Changes]] page.
-
-**** Notable version 9.2 changes
-
-- Change in the structure template expansion.  This means things like =<s= no longer work.  You can
-  do one of two things.  Use the new template expansion mechanism with
-  =org-insert-structure-template= that is bound to =C-c C-, .=.  Or do the following and add to =org-modules=.
-
-  #+BEGIN_SRC emacs-lisp :tangle no
-  (require 'org-tempo)
-  #+END_SRC
-
-*** Utilities
-
-**** Google Maps
-
-** Resources
-
-*** Emacs Calc
-- [[https://github.com/ahyatt/emacs-calc-tutorials][Emacs Calc Tutorials]]
-- [[https://www.gnu.org/software/emacs/refcards/pdf/calccard.pdf][Emacs Calc Reference Card]]
-** Inspiration
-
-There are many elements of this configuration that are drawn from other users' configurations
-online.  Below is a list of only some of those configurations that caught my eye.
-
-- [[http://sachachua.com/blog/][Sacha Chua]]'s [[http://sachac.github.io/.emacs.d/Sacha.html][emacs configuration]]
-- [[http://doc.norang.ca/org-mode.html][Bernt Hansen (norang.ca) Org Mode]] (Organize Your Life in Plain Text)
-- [[http://eschulte.github.io/emacs24-starter-kit/][Emacs Starter Kit]]
-- [[http://www.wisdomandwonder.com/wordpress/wp-content/uploads/2014/03/C3F.html][Creation and conservation of computer files]], and later [[https://github.com/grettke/home/blob/master/ALEC.org][ALEC]]
-- [[http://kitchingroup.cheme.cmu.edu/blog/][John Kitchin]]'s [[https://github.com/jkitchin/scimax][emacs configuration]]
-- [[http://www.djcbsoftware.nl/dot-emacs.html][DJCB]]
-- [[https://github.com/bzg/dotemacs/blob/master/emacs.el][Bastien Guerry]]
-- [[https://github.com/larstvei/dot-emacs][Lars Tveito]]
-- [[https://github.com/purcell/emacs.d][Steve Purcell]]
-- [[http://zeekat.nl/articles/making-emacs-work-for-me.html][Making Emacs work for me]]
-- [[https://github.com/howardabrams/dot-files][Howard Abrams]]
-- [[https://github.com/jd/emacs.d][Julien Danmmjou]]
-- [[https://github.com/jwiegley/dot-emacs][John Wiegley]]
-- [[https://github.com/joedicastro/dotfiles/tree/master/emacs][Joe Di Castro]]
-- [[http://org.rix.si/][Ryan Rix]]'s [[http://doc.rix.si/cce/cce.html][Complete Computing Environment]] (formerly [[http://doc.rix.si/org/fsem.html][Hardcore Freestyle Emacs]] [[http://fort.kickass.systems:10082/cgit/personal/rrix/pub/fsem.git/tree/fsem.org][org source]])
-- [[https://github.com/abelardojarab/emacs-config][Abelardo Jara-Berrocal]]
-- [[https://writequit.org][Lee Hinman]]'s [[https://writequit.org/eos/eos.html][Emacs Operating System]] (see https://github.com/dakrone/eos)
-- [[http://karl-voit.at/][Karl Voit]]'s [[https://github.com/novoid/dot-emacs][dot-emacs]]
-- [[https://github.com/DamienCassou/emacs.d/blob/master/init.el][Damien Cassou]]
-- [[https://github.com/hlissner][Henrik Lissner]] [[https://github.com/hlissner/doom-emacs][Doom Emacs]]
-- [[https://github.com/jethrokuan/.emacs.d][Jethro Kuan]]
-- [[https://gitlab.com/ambrevar/dotfiles][Ambrevar]]
+emacs.org
