move some of the customization for notmuch to :custom

--- a/emacs.org
+++ b/emacs.org
@@ -2425,6 +2425,12 @@ The following is then the configuration that integrates Emacs with Notmuch.
 #+begin_src emacs-lisp
 (use-package notmuch
   :commands (notmuch)
+  :custom
+  (notmuch-search-oldest-first nil)
+  (notmuch-hello-thousands-separator ",")
+  (notmuch-crypto-process-mime t)
+  (notmuch-show-part-button-default-action 'notmuch-show-view-part)
+
   :preface
   (defmacro forge-notmuch-show-tag (tags)
     "Macro to take list of tags and apply to query."
@@ -2565,10 +2571,6 @@ Will open a notmuch search buffer of the search results."
   :config
   (add-hook 'notmuch-show-hook '(lambda () (setq show-trailing-whitespace nil)))
   (setq notmuch-archive-tags '("-unread" "-inbox" "-trash" "-bulk")
-        notmuch-crypto-process-mime t
-        notmuch-hello-thousands-separator ","
-        notmuch-search-oldest-first nil
-        notmuch-show-part-button-default-action 'notmuch-show-view-part
         notmuch-saved-searches '((:name "Inbox"           :key "i" :query "tag:inbox")
                                  (:name "Flagged"         :key "f" :query "tag:flagged or tag:important")
                                  (:name "Today"           :key "t" :query "date:24h.. and ( tag:inbox or tag:unread )")
